fix(swagger) typos
